# haufcode

./: .gitignore  LICENSE  README.md  SPECS.md  haufcode.py  pyproject.toml
.github/workflows/: ci.yml
haufcode/: __init__.py  __main__.py  agents.py  config.py  daemon.py  executor.py  git_ops.py  logger.py  metrics.py  onboarding.py  planning.py  project_setup.py  prompts.py  runner.py  telegram_client.py  telegram_listener.py  tool_caller.py
