[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "haufcode"
version = "0.1.0"
description = "Orchestrateur de développement logiciel automatisé par agents IA"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["ai", "agents", "llm", "developer-tools", "automation", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

# Aucune dépendance externe — stdlib uniquement
dependencies = []

[project.scripts]
haufcode = "haufcode.__main__:main"

[project.urls]
Homepage = "https://github.com/hauf974/haufcode"
Repository = "https://github.com/hauf974/haufcode"
Issues = "https://github.com/hauf974/haufcode/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["haufcode*"]

# ── Ruff (linter) ─────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line too long (géré au cas par cas)
    "F401",   # unused import (parfois intentionnel dans __init__)
]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
